--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -82,13 +82,25 @@
 }
 
 body {
-  background-color: black;
+  background: url('/images/GRADIANT.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
   overflow-x: hidden;
-  height: 100%;
-  width: 100%;
+  height: 100vh;
+  width: 100vw;
   position: relative;
   font-family: "Avenir Next", -apple-system, BlinkMacSystemFont, sans-serif;
   font-weight: 400;
+}
+
+html {
+  background: url('/images/GRADIANT.png');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 
 * {
