--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -65,6 +65,19 @@
   }
 }
 
+@keyframes scroll-left {
+  0% {
+    transform: translateX(0);
+  }
+  100% {
+    transform: translateX(-50%);
+  }
+}
+
+.animate-scroll-left {
+  animation: scroll-left 30s linear infinite;
+}
+
 @font-face {
   font-family: "Avenir Next";
   src: url("../../public/assets/fonts/Avenir-Regular.woff") format("woff");
